--- a/pom.xml
+++ b/pom.xml
@@ -27,21 +27,24 @@
         </repository>
         <repository>
             <id>redstonedgaming-repo</id>
-            <url>http://maven.redstonedgaming.com:8081/nexus/content/repositories/snapshots/</url>
+            <url>http://maven.redstonedgaming.com/nexus/content/repositories/snapshots/</url>
+        </repository>
+        <repository>
+            <id>redstonedgaming-releases</id>
+            <url>http://maven.redstonedgaming.com/nexus/content/repositories/releases/</url>
         </repository>
     </repositories>
     <!--Spigot API-->
     <dependencies>
         <dependency>
-            <groupId>org.spigotmc</groupId>
-            <artifactId>spigot-api</artifactId>
-            <version>1.8.8-R0.1-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
             <groupId>com.redstonedgaming</groupId>
             <artifactId>SQLEconomy</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot</artifactId>
+            <version>1.9.4</version>
         </dependency>
     </dependencies>
 
